--- a/css/style.css
+++ b/css/style.css
@@ -732,7 +732,7 @@ a:focus {
     font-size: 60px;
     line-height: 60px;
     background-image: linear-gradient(#960000, #960000);
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: .5s;
 }
@@ -1879,7 +1879,7 @@ a:focus {
 
 .sidebar .category-widget ul li span {
     display: inline-block;
-    float: right;
+    /*float: right;*/
 }
 
 .sidebar .sidebar-widget .tag-widget {
@@ -2062,4 +2062,37 @@ th {
 table, th, td {
     border: 1px solid black;
     border-radius: 10px;
+}
+/*******************************/
+/********* Accordion **********/
+/*******************************/
+.accordion{
+    max-width: 400px;
+    background: #009578;
+}
+.accordion__lable,.accordion__content{
+    padding: 14px 20px;
+
+}
+.accordion__lable{
+    display: block;
+    color: #ffffff;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+    transition: background 0.1s;
+}
+.accordion__content:hover{
+    background-color: rgba(0,0 , 0, 0.1);
+}
+.accordion__lable::after{
+    content: "a";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20px;
+    width: 12px;
+    height: 6px;
+    background-image:url('data:image/svg+xml;utf8,<svg width="100" height="50" xmlns="http://www.w3.org/2000/svg"><polygon poins="0,0,100,0,50,50" style="fill:%23FFFFFF99;"/></svg>' ) ;
+    background-size: contain;
 }
