--- a/css/style.css
+++ b/css/style.css
@@ -2066,33 +2066,40 @@ table, th, td {
 /*******************************/
 /********* Accordion **********/
 /*******************************/
-.accordion{
-    max-width: 400px;
-    background: #009578;
-}
-.accordion__lable,.accordion__content{
-    padding: 14px 20px;
-
-}
-.accordion__lable{
-    display: block;
-    color: #ffffff;
-    font-weight: 500;
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #eee;
+    color: #444;
     cursor: pointer;
-    position: relative;
-    transition: background 0.1s;
-}
-.accordion__content:hover{
-    background-color: rgba(0,0 , 0, 0.1);
-}
-.accordion__lable::after{
-    content: "a";
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 20px;
-    width: 12px;
-    height: 6px;
-    background-image:url('data:image/svg+xml;utf8,<svg width="100" height="50" xmlns="http://www.w3.org/2000/svg"><polygon poins="0,0,100,0,50,50" style="fill:%23FFFFFF99;"/></svg>' ) ;
-    background-size: contain;
-}
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+  }
+
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+    background-color: #ccc;
+  }
+  
+  /* Style the accordion panel. Note: hidden by default */
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+  }
+
+  .accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+  }
